# picam

./: .gitignore  ATTRIBUTIONS.md  LICENSE  README.md  default-site  pi-gen-setup  picam.py  picam.service  picam.yaml.empty  picam.yaml.example  picam_controls.py  pyproject.toml  setup
picam-ctl/: app.py  html_fields.py
picam-ctl/picam/: admin.py  audio.py  device.py  index.py  video.py  wifi.py
picam-ctl/static/css/: style.css
picam-ctl/templates/: admin.html  config_audio_device.html  config_device.html  config_video_device.html  config_wifi.html  devices.html  index.html
picam-ctl/templates/layouts/: base.html
services/: picam-ctl.service  picam.service
src/: picam.yaml.example  rtsp_server.py  wsgi.py
src/picam/: admin.py  audio.py  device.py  index.py  utils.py  video.py  wifi.py
src/sysctl.d/: local.conf
src/systemd/: picam-ctl.service  picam.service
src/templates/: 404.html  500.html  admin.html  config_video_device.html  devices.html  index.html
